tests/ui/invalid_pymethod_receiver.stderr
error[E0277]: the trait bound `i32: TryFrom<&pyo3::Bound<'_, MyClass>>` is not satisfied
 --> tests/ui/invalid_pymethod_receiver.rs:8:44
  |
8 |     fn method_with_invalid_self_type(_slf: i32, _py: Python<'_>, _index: u32) {}
  |                                            ^^^ the trait `From<&pyo3::Bound<'_, MyClass>>` is not implemented for `i32`
  |
  = help: `i32` implements trait `From<T>`:
            From<bool>
            From<deranged::RangedI32<MIN, MAX>>
            From<i16>
            From<i8>
            From<u16>
            From<u8>
  = note: required for `&pyo3::Bound<'_, MyClass>` to implement `Into<i32>`
  = note: required for `i32` to implement `TryFrom<&pyo3::Bound<'_, MyClass>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
